# Intercom

./: .gitignore  LICENSE  README.md
InterCom-desktop/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  backendmanager.cpp  backendmanager.h  chatitemdelegate.cpp  chatitemdelegate.h  chatlistmodel.cpp  chatlistmodel.h  config.h  dayseparator.cpp  dayseparator.h  logo.qrc  main.cpp  mainwindow.cpp  mainwindow.h  messagewidget.cpp  messagewidget.h  settingsdialog.cpp  settingsdialog.h  smarttextedit.cpp  smarttextedit.h  thememanager.cpp  thememanager.h
intercom-core/: ChatSessionManager.cs  CommandHandler.cs  InterCom-core.sln  Program.cs  WriterIP.cs
intercom-core/configs/: AppSettings.cs
intercom-core/network/: AutoDiscoveryService.cs  BackgroundService.cs  ChatManager.cs  ConnectionManager.cs  Detector.cs  Interface_list.cs  RelayService.cs  RouteManager.cs  Sender.cs  Server.cs
intercom-core/user_data/: NicknameManager.cs
